--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "require": {
     "craftcms/cms": "^4.2.1",
+    "craftcms/redactor": "3.0.3",
+    "verbb/super-table": "3.0.7",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
