--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1675132122
+dateModified: 1675132413
 email:
   fromEmail: marvin@butter.com.hk
   fromName: 'Butter Base'
@@ -7,7 +7,7 @@ meta:
   __names__:
     0e83711a-9cf5-475a-8870-95cf36695d4a: Heading # Heading
     0f5aadae-2721-41e8-933c-6e6c8efdaea6: 'Butter Base' # Butter Base
-    7ef48fe6-b2e7-4db6-8780-d05ca6e76712: Accordion # Accordion
+    7ef48fe6-b2e7-4db6-8780-d05ca6e76712: Accordion
     17fb8838-f4d8-4a38-9156-1122b6ee8786: Body # Body
     34d757c2-6a46-4fac-abca-c39b46a73934: Heading # Heading
     78edba3e-0c3b-4229-a26a-38a8b83a1c35: Heading # Heading
