--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,15 +1,15 @@
-dateModified: 1675135185
+dateModified: 1675147490
 email:
   fromEmail: marvin@butter.com.hk
   fromName: 'Butter Base'
   transportType: craft\mail\transportadapters\Sendmail
 meta:
   __names__:
-    00e79fbb-9025-48bc-86e0-6d1bba5d24ac: 'Tab Content'
+    00e79fbb-9025-48bc-86e0-6d1bba5d24ac: 'Tab Content' # Tab Content
     0e83711a-9cf5-475a-8870-95cf36695d4a: Heading # Heading
     0f5aadae-2721-41e8-933c-6e6c8efdaea6: 'Butter Base' # Butter Base
-    1e76e75a-703a-4fa0-a4b7-6900bddca66f: 'Padding Classes'
-    2b3c1a92-4bbb-4ccf-b6d5-255d67cad436: Tabs
+    1e76e75a-703a-4fa0-a4b7-6900bddca66f: 'Padding Classes' # Padding Classes
+    2b3c1a92-4bbb-4ccf-b6d5-255d67cad436: Tabs # Tabs
     02e08cf1-f4fb-48eb-956f-953bf078d484: Body # Body
     7ef48fe6-b2e7-4db6-8780-d05ca6e76712: Accordion # Accordion
     17fb8838-f4d8-4a38-9156-1122b6ee8786: Body # Body
@@ -21,11 +21,11 @@ meta:
     883ce90a-ab3e-4732-a747-7441c90a4b61: Body # Body
     72756b12-b88c-44c1-9d00-947d14e9b5b9: Homepage # Homepage
     3193946b-b765-4d14-a0ab-a4566728f07c: 'Content Blocks' # Content Blocks
-    94211255-4d75-4bc2-87c1-ebb3707903e7: Tab
+    94211255-4d75-4bc2-87c1-ebb3707903e7: Tabs # Tab
     a235ed0c-eb02-40e7-9562-90a73bbc794e: Accordion # Accordion
     b5b45511-d660-4b43-99af-ecf49c21e74a: 'Butter Base' # Butter Base
     c4a33146-25e2-4b36-97cb-b6bc2032389c: Pages # Pages
-    ce124ebe-b018-4d4c-b53a-f76757514026: 'Tab Heading'
+    ce124ebe-b018-4d4c-b53a-f76757514026: 'Tab Heading' # Tab Heading
     d2f74f8d-c18f-47d3-bf84-06ff803b0d92: Homepage # Homepage
     f5d951bd-7589-4e90-a038-1d04fa2f7c1b: Common # Common
 plugins:
