--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "craftcms/cms": "^4.2.1",
     "craftcms/redactor": "3.0.3",
     "verbb/super-table": "3.0.7",
-    "vlucas/phpdotenv": "^5.4.0"
+    "vlucas/phpdotenv": "^5.4.0",
+    "sebastianlenz/linkfield": "^2.1"
   },
   "require-dev": {
     "yiisoft/yii2-shell": "^2.0.3"
