--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1675147490
+dateModified: 1675149448
 email:
   fromEmail: marvin@butter.com.hk
   fromName: 'Butter Base'
@@ -18,15 +18,20 @@ meta:
     78edba3e-0c3b-4229-a26a-38a8b83a1c35: Heading # Heading
     082c5614-1d5d-4619-bde0-482749dbd536: Accordion # Accordion
     240f0a17-fabc-400a-972b-f66a52e68c4f: Default # Default
+    801ae06f-6c06-400d-ad36-fc1d4017f972: Heading # Heading
     883ce90a-ab3e-4732-a747-7441c90a4b61: Body # Body
     72756b12-b88c-44c1-9d00-947d14e9b5b9: Homepage # Homepage
     3193946b-b765-4d14-a0ab-a4566728f07c: 'Content Blocks' # Content Blocks
-    94211255-4d75-4bc2-87c1-ebb3707903e7: Tabs # Tab
+    4449155e-ddc4-41c4-bbcf-1328a4630e92: 'Feature Cards' # Feature Cards
+    94211255-4d75-4bc2-87c1-ebb3707903e7: Tabs # Tabs
     a235ed0c-eb02-40e7-9562-90a73bbc794e: Accordion # Accordion
     b5b45511-d660-4b43-99af-ecf49c21e74a: 'Butter Base' # Butter Base
+    b90fe952-cbf8-4780-9b6a-7ab674d54548: Body # Body
+    b427388b-54d0-4be8-bea8-55771d9bfa34: 'Call to action' # Call to action
     c4a33146-25e2-4b36-97cb-b6bc2032389c: Pages # Pages
     ce124ebe-b018-4d4c-b53a-f76757514026: 'Tab Heading' # Tab Heading
     d2f74f8d-c18f-47d3-bf84-06ff803b0d92: Homepage # Homepage
+    e19213fe-09b9-4f1b-be5f-0c6af684c979: 'Featured Items' # Featured Items
     f5d951bd-7589-4e90-a038-1d04fa2f7c1b: Common # Common
 plugins:
   redactor:
@@ -37,6 +42,10 @@ plugins:
     edition: standard
     enabled: true
     schemaVersion: 3.0.0
+  typedlinkfield:
+    edition: standard
+    enabled: true
+    schemaVersion: 2.0.0
 system:
   edition: solo
   live: true
