--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "craftcms/redactor": "3.0.3",
     "verbb/super-table": "3.0.7",
     "vlucas/phpdotenv": "^5.4.0",
-    "sebastianlenz/linkfield": "^2.1"
+    "sebastianlenz/linkfield": "^2.1",
+    "vaersaagod/dospaces": "^2.0"
   },
   "require-dev": {
     "yiisoft/yii2-shell": "^2.0.3"
