--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,19 +1,38 @@
-dateModified: 1675158024
+dateModified: 1675216070
 email:
   fromEmail: marvin@butter.com.hk
   fromName: 'Butter Base'
   transportType: craft\mail\transportadapters\Sendmail
+fs:
+  devSpace:
+    hasUrls: true
+    name: 'Dev Space'
+    settings:
+      bucket: $DEV_SPACES_BUCKET
+      contentDisposition: ''
+      endpoint: $DEV_SPACES_ENDPOINT
+      expires: ''
+      keyId: $DEV_SPACES_KEY
+      region: $DEV_SPACES_REGION
+      secret: $DEV_SPACES_SECRET
+      subfolder: butterbase
+    type: vaersaagod\dospaces\Fs
+    url: $DEV_SPACES_BASE_URL
 meta:
   __names__:
     00e79fbb-9025-48bc-86e0-6d1bba5d24ac: 'Tab Content' # Tab Content
     0e83711a-9cf5-475a-8870-95cf36695d4a: Heading # Heading
     0f5aadae-2721-41e8-933c-6e6c8efdaea6: 'Butter Base' # Butter Base
+    1ccee473-50af-40c5-8250-aaa76096767d: Media
     1e76e75a-703a-4fa0-a4b7-6900bddca66f: 'Padding Classes' # Padding Classes
     2b3c1a92-4bbb-4ccf-b6d5-255d67cad436: Tabs # Tabs
     02e08cf1-f4fb-48eb-956f-953bf078d484: Body # Body
     2e322a3d-6592-4626-89bf-c3286fc7f809: 'Legal Navigation' # Legal Navigation
+    3ca4309c-3bd0-4452-820c-583090fee623: 'Slidie Title' # Slidie Title
+    3e4a4791-081c-44e5-b696-27fe15365b85: 'Slide Content' # Slide Content
     5b0ff9ce-59f0-4c80-aa74-97bbcea5b5fc: navlink # navlink
-    5ebbf446-f291-44cb-9ae9-77ccb6b2520f: 'Tab Heading'
+    5ea4cbc3-8c8d-4915-aed3-b240ed09f0a0: Image # Image
+    5ebbf446-f291-44cb-9ae9-77ccb6b2520f: 'Tab Heading' # Tab Heading
     7b9a2d77-1523-489b-8c4b-4bfcdfc7dbc3: Copyright # Copyright
     7ef48fe6-b2e7-4db6-8780-d05ca6e76712: Accordion # Accordion
     8c9b4348-184c-4e97-99a4-6d2a6157189c: Announcement # Announcement
@@ -27,6 +46,7 @@ meta:
     801ae06f-6c06-400d-ad36-fc1d4017f972: Heading # Heading
     883ce90a-ab3e-4732-a747-7441c90a4b61: Body # Body
     919d3e3b-e519-41d6-bc52-9d7f689a94f3: Navlink # Navlink
+    932ab354-ed04-4fc5-b29b-8c0940c05e3e: SlideLink # SlideLink
     3127e518-f710-485b-9cd9-68f3382f27b4: Body # Body
     72756b12-b88c-44c1-9d00-947d14e9b5b9: Homepage # Homepage
     3193946b-b765-4d14-a0ab-a4566728f07c: 'Content Blocks' # Content Blocks
@@ -34,15 +54,17 @@ meta:
     8466994d-4dfd-4f8f-89c4-b49c4d06c5e8: Navlink # Navlink
     56547699-1cf7-4bff-93c7-3c3a1b82d699: Footer # Footer
     94211255-4d75-4bc2-87c1-ebb3707903e7: Tabs # Tabs
+    a49e5098-eb39-419f-986b-3fd1111faac5: Slider # Slider
     a95ded72-28f3-40b1-84c8-7a4de0d59fdc: Accordion # Accordion
     a235ed0c-eb02-40e7-9562-90a73bbc794e: Accordion # Accordion
     b6f093f0-e38b-466f-8c0f-1e8db96d4cd3: 'Menu Title' # Menu Title
     b55d7ffd-972e-47ea-963a-483533b482dc: Header # Header
     b90fe952-cbf8-4780-9b6a-7ab674d54548: Body # Body
-    b177c7ba-2763-4f45-ab37-ddf88b5be6c1: 'Tab Content'
+    b177c7ba-2763-4f45-ab37-ddf88b5be6c1: 'Tab Content' # Tab Content
     b427388b-54d0-4be8-bea8-55771d9bfa34: 'Call to action' # Call to action
     c0852df2-0482-43b0-ae48-eeb443a415e7: 'Main Navigation' # Main Navigation
     c4a33146-25e2-4b36-97cb-b6bc2032389c: Pages # Pages
+    c8d24909-9834-4afa-9c6d-dfc0f16ef9d2: Slide # Slide
     c2316d1e-96a1-48ef-9a2c-1fae3f850929: Submenu # Submenu
     c4119900-004c-4731-9081-de3a696eacde: Heading # Heading
     cacf2ab9-82ca-4b60-9328-6dd17a39e489: News # News
