update feature cards block field

--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1675216070
+dateModified: 1675219870
 email:
   fromEmail: marvin@butter.com.hk
   fromName: 'Butter Base'
@@ -23,7 +23,7 @@ meta:
     00e79fbb-9025-48bc-86e0-6d1bba5d24ac: 'Tab Content' # Tab Content
     0e83711a-9cf5-475a-8870-95cf36695d4a: Heading # Heading
     0f5aadae-2721-41e8-933c-6e6c8efdaea6: 'Butter Base' # Butter Base
-    1ccee473-50af-40c5-8250-aaa76096767d: Media
+    1ccee473-50af-40c5-8250-aaa76096767d: Media # Media
     1e76e75a-703a-4fa0-a4b7-6900bddca66f: 'Padding Classes' # Padding Classes
     2b3c1a92-4bbb-4ccf-b6d5-255d67cad436: Tabs # Tabs
     02e08cf1-f4fb-48eb-956f-953bf078d484: Body # Body
