--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1675219870
+dateModified: 1675230619
 email:
   fromEmail: marvin@butter.com.hk
   fromName: 'Butter Base'
@@ -33,6 +33,7 @@ meta:
     5b0ff9ce-59f0-4c80-aa74-97bbcea5b5fc: navlink # navlink
     5ea4cbc3-8c8d-4915-aed3-b240ed09f0a0: Image # Image
     5ebbf446-f291-44cb-9ae9-77ccb6b2520f: 'Tab Heading' # Tab Heading
+    6c7a48d4-7998-435f-8c90-3a90de3cbfea: Excerpt # Excerpt
     7b9a2d77-1523-489b-8c4b-4bfcdfc7dbc3: Copyright # Copyright
     7ef48fe6-b2e7-4db6-8780-d05ca6e76712: Accordion # Accordion
     8c9b4348-184c-4e97-99a4-6d2a6157189c: Announcement # Announcement
@@ -76,6 +77,7 @@ meta:
     ea5053b7-2de8-4155-82a0-5a00464efa71: Default # Default
     ec4987e1-3168-49b9-a38c-688ef31547d8: 'Menu Group' # Menu Group
     f5d951bd-7589-4e90-a038-1d04fa2f7c1b: Common # Common
+    f9de60c5-b728-4a0b-b1a4-07775d588038: Thumbnail # Thumbnail
 plugins:
   dospaces:
     edition: standard
