--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dot": "^1.1.3",
     "enquire.js": "^2.1.6",
     "jquery": "^3.6.0",
+    "slick-carousel": "^1.8.1",
     "slick-slider": "^1.8.2"
   }
 }
