--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,11 @@
   "require": {
     "craftcms/cms": "^4.2.1",
     "craftcms/redactor": "3.0.3",
-    "verbb/super-table": "3.0.7",
-    "vlucas/phpdotenv": "^5.4.0",
+    "enupal/translate": "3.0.1",
     "sebastianlenz/linkfield": "^2.1",
-    "vaersaagod/dospaces": "^2.0"
+    "vaersaagod/dospaces": "^2.0",
+    "verbb/super-table": "3.0.7",
+    "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
     "yiisoft/yii2-shell": "^2.0.3"
