--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1675305844
+dateModified: 1675931920
 email:
   fromEmail: marvin@butter.com.hk
   fromName: 'Butter Base'
@@ -23,20 +23,19 @@ meta:
     00e79fbb-9025-48bc-86e0-6d1bba5d24ac: 'Tab Content' # Tab Content
     0e83711a-9cf5-475a-8870-95cf36695d4a: Heading # Heading
     0f5aadae-2721-41e8-933c-6e6c8efdaea6: 'Butter Base' # Butter Base
+    1c6f7825-37ef-467e-9bd9-880b6ebb7237: Description
     1ccee473-50af-40c5-8250-aaa76096767d: Media # Media
     1e76e75a-703a-4fa0-a4b7-6900bddca66f: 'Padding Classes' # Padding Classes
     2b3c1a92-4bbb-4ccf-b6d5-255d67cad436: Tabs # Tabs
     02e08cf1-f4fb-48eb-956f-953bf078d484: Body # Body
     2e322a3d-6592-4626-89bf-c3286fc7f809: 'Legal Navigation' # Legal Navigation
+    2e4337db-0083-4a95-8f08-bbadd4955177: Subtitle
     3ca4309c-3bd0-4452-820c-583090fee623: 'Slidie Title' # Slidie Title
     3e4a4791-081c-44e5-b696-27fe15365b85: 'Slide Content' # Slide Content
     5b0ff9ce-59f0-4c80-aa74-97bbcea5b5fc: navlink # navlink
-    5cc122be-6d23-4ca8-b5d1-b04278888189: 'Google Map Url' # Google Map Url
     5ea4cbc3-8c8d-4915-aed3-b240ed09f0a0: Image # Image
     5ebbf446-f291-44cb-9ae9-77ccb6b2520f: 'Tab Heading' # Tab Heading
     6c7a48d4-7998-435f-8c90-3a90de3cbfea: Excerpt # Excerpt
-    6c11158a-84ff-4a6a-a2af-17430e6c537d: 'Address Details' # Address Details
-    07abc770-16d2-49e2-8552-48f144a6a8dc: 'Map Details' # Map Details
     7b9a2d77-1523-489b-8c4b-4bfcdfc7dbc3: Copyright # Copyright
     7ef48fe6-b2e7-4db6-8780-d05ca6e76712: Accordion # Accordion
     8c9b4348-184c-4e97-99a4-6d2a6157189c: Announcement # Announcement
@@ -45,6 +44,7 @@ meta:
     68f928fb-1a3a-4d60-bde4-8a8c7bbd28ae: Heading # Heading
     77efd199-d2df-4fbf-8a4b-a55cb0261ad7: 'Address Details' # Address Details
     78edba3e-0c3b-4229-a26a-38a8b83a1c35: Heading # Heading
+    79aa842e-51cb-4aa2-887c-d237fc2a404f: Heading
     082c5614-1d5d-4619-bde0-482749dbd536: Accordion # Accordion
     230f5dc9-0101-42f6-8cc5-aa93235c2396: 'Menu Title' # Menu Title
     240f0a17-fabc-400a-972b-f66a52e68c4f: Default # Default
@@ -53,9 +53,7 @@ meta:
     919d3e3b-e519-41d6-bc52-9d7f689a94f3: Navlink # Navlink
     932ab354-ed04-4fc5-b29b-8c0940c05e3e: SlideLink # SlideLink
     3127e518-f710-485b-9cd9-68f3382f27b4: Body # Body
-    9073db10-8a1d-4646-8415-156a86095b57: 'Google Map Embed' # Google Map Embed
     72756b12-b88c-44c1-9d00-947d14e9b5b9: Homepage # Homepage
-    92460f62-240e-4db2-bd9e-764a943afdeb: Type # Type
     3193946b-b765-4d14-a0ab-a4566728f07c: 'Content Blocks' # Content Blocks
     4449155e-ddc4-41c4-bbcf-1328a4630e92: 'Feature Cards' # Feature Cards
     8466994d-4dfd-4f8f-89c4-b49c4d06c5e8: Navlink # Navlink
@@ -69,6 +67,7 @@ meta:
     b90fe952-cbf8-4780-9b6a-7ab674d54548: Body # Body
     b177c7ba-2763-4f45-ab37-ddf88b5be6c1: 'Tab Content' # Tab Content
     b427388b-54d0-4be8-bea8-55771d9bfa34: 'Call to action' # Call to action
+    c074f4fe-289c-415e-9e81-8ce32db9b862: Image
     c0852df2-0482-43b0-ae48-eeb443a415e7: 'Main Navigation' # Main Navigation
     c4a33146-25e2-4b36-97cb-b6bc2032389c: Pages # Pages
     c8d24909-9834-4afa-9c6d-dfc0f16ef9d2: Slide # Slide
@@ -79,6 +78,7 @@ meta:
     d2f74f8d-c18f-47d3-bf84-06ff803b0d92: Homepage # Homepage
     d5964d39-cf97-4afa-bd58-0decc4272b87: body # body
     db3fcb60-f719-40d3-bad4-77dd112dee6b: Heading # Heading
+    e4d37003-92b6-46bf-a809-a834131fae21: 'Hero Banner'
     e19213fe-09b9-4f1b-be5f-0c6af684c979: 'Featured Items' # Featured Items
     ea94f442-5271-4806-9615-d5646aa78587: 'Content Blocks' # Content Blocks
     ea5053b7-2de8-4155-82a0-5a00464efa71: Default # Default
@@ -90,11 +90,6 @@ plugins:
     edition: standard
     enabled: true
     schemaVersion: 2.0.0
-  enupal-translate:
-    edition: standard
-    enabled: true
-    licenseKey: CRAD3HNKHIGUP7VSUJ1VOFGD
-    schemaVersion: 3.0.0
   redactor:
     edition: standard
     enabled: true
@@ -108,7 +103,7 @@ plugins:
     enabled: true
     schemaVersion: 2.0.0
 system:
-  edition: solo
+  edition: pro
   live: true
   name: 'Butter Base'
   schemaVersion: 4.0.0.9
