--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "sebastianlenz/linkfield": "^2.1",
     "vaersaagod/dospaces": "^2.0",
     "verbb/super-table": "3.0.7",
-    "vlucas/phpdotenv": "^5.4.0"
+    "vlucas/phpdotenv": "^5.4.0",
+    "xpertbot/craft-wheelform": "3.1.5"
   },
   "require-dev": {
     "yiisoft/yii2-shell": "^2.0.3"
