--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1677224241
+dateModified: 1677478131
 email:
   fromEmail: marvin@butter.com.hk
   fromName: 'Butter Base'
@@ -91,6 +91,7 @@ meta:
     b55d7ffd-972e-47ea-963a-483533b482dc: Header # Header
     b90fe952-cbf8-4780-9b6a-7ab674d54548: Body # Body
     b177c7ba-2763-4f45-ab37-ddf88b5be6c1: 'Tab Content' # Tab Content
+    b520ddfe-6584-49bf-92d2-37b676bd9a5e: 'Test Field' # Test Field
     b427388b-54d0-4be8-bea8-55771d9bfa34: 'Call to action' # Call to action
     c074f4fe-289c-415e-9e81-8ce32db9b862: Image # Image
     c0852df2-0482-43b0-ae48-eeb443a415e7: 'Main Navigation' # Main Navigation
@@ -105,6 +106,7 @@ meta:
     d5964d39-cf97-4afa-bd58-0decc4272b87: body # body
     db3fcb60-f719-40d3-bad4-77dd112dee6b: Heading # Heading
     e4d37003-92b6-46bf-a809-a834131fae21: 'Hero Banner' # Hero Banner
+    e7643dbf-694d-4c36-a969-bb58c143f0c7: 'Enupal Test' # Enupal Test
     e19213fe-09b9-4f1b-be5f-0c6af684c979: 'Featured Items' # Featured Items
     ea94f442-5271-4806-9615-d5646aa78587: 'Content Blocks' # Content Blocks
     ea5053b7-2de8-4155-82a0-5a00464efa71: Default # Default
@@ -137,6 +139,17 @@ plugins:
     edition: standard
     enabled: true
     schemaVersion: 2.0.0
+    settings:
+      cp_label: Forms
+      disabled_fields: ''
+      from_email: devs@butter.com.hk
+      from_name: ButterBase
+      recaptcha_min_score: '0.5'
+      recaptcha_public: ''
+      recaptcha_secret: ''
+      recaptcha_version: '2'
+      success_message: 'Thank You! we will review your submission shortly.'
+      volume_id: ''
 system:
   edition: pro
   live: true
